--- a/index.html
+++ b/index.html
@@ -41,12 +41,10 @@
     </header>
     <section class="home">
         <div class="informacoes">
-            <h1>Olá! Sou Gabriel Fernandes de Souza</h1>
-            <p>Um amante da telecnologia em formação como programador SAP ABAP com alguns conhecimentos em
-                desenvolvimento web.</p>
-            <p>Estou atualmente em transição de carreira para a area de tecnologia e em busca de novos desafios no mundo
-                SAP.🚀</p>
-            <p>Gostou do meu perfil ? Me chame nas minhas redes socias para marcarmos um bate-papo.😁</p>
+            <h1>Olá! Sou Gabriel Fernandes de Souza Consultor ABAP</h1>
+            <p>Sou um profissional em transição para a área de tecnologia, unindo mais de 5 anos de experiência prática em logística e supply chain à programação SAP ABAP formado em Tecnólogo de Logística pela FATEC.</p>
+            <p>Atuo no desenvolvimento de relatórios ALV, BAPIs, Enhancements, Jobs e ABAP Orientado a Objetos (OO). Atualmente, foco minha evolução em tecnologias de última geração para S/4HANA, estudando CDS Views, BTP, RAP e integração com Fiori via Eclipse.🚀</p>
+            <p>Gostou do meu perfil? Me chame nas redes sociais para um bate-papo!😁</p>
 
 
             <ul class="redes-sociais">
@@ -89,6 +87,45 @@
 
         <div class="container-projetos">
             <div class="projeto ativo">
+                <a href="#" target="_blank">
+                    <img src="./src/imagens/placeholder.png" alt="Projeto ABAP">
+
+                    <h3>Projeto ABAP em Breve</h3>
+
+                    <div class="informacoes-projeto">
+                        <p>ABAP</p>
+                        <p>🔗Ver no GitHub Pages</p>
+                    </div>
+                </a>
+            </div>
+
+            <div class="projeto ativo">
+                <a href="#" target="_blank">
+                    <img src="./src/imagens/placeholder.png" alt="Projeto ABAP">
+
+                    <h3>Projeto ABAP em Breve</h3>
+
+                    <div class="informacoes-projeto">
+                        <p>ABAP</p>
+                        <p>🔗Ver no GitHub Pages</p>
+                    </div>
+                </a>
+            </div>
+
+            <div class="projeto ativo">
+                <a href="#" target="_blank">
+                    <img src="./src/imagens/placeholder.png" alt="Projeto ABAP">
+
+                    <h3>Projeto ABAP em Breve</h3>
+
+                    <div class="informacoes-projeto">
+                        <p>ABAP</p>
+                        <p>🔗Ver no GitHub Pages</p>
+                    </div>
+                </a>
+            </div>
+
+           <div class="projeto ativo">
                 <a href="https://gabrielfs12.github.io/Projeto-Mario-Filme/" target="_blank">
                     <img src="./src/imagens/projeto-mario.png" alt="Projeto Mario - HTML, CSS E JS">
 
@@ -101,40 +138,40 @@
                 </a>
             </div>
 
-            <div class="projeto ativo">
-                <a href="https://gabrielfs12.github.io/semana-do-zero-gta-5/" target="_blank">
-                    <img src="./src/imagens/projeto-gta.png" alt="Projeto GTA - HTML, CSS E JS">
+            <div class="projeto">
+                <a href="https://gabrielfs12.github.io/praticando_dev_carrosel/" target="_blank">
+                    <img src="./src/imagens/projeto-x-devs.png" alt="Projeto X-Devs - HTML, CSS E JS">
 
-                    <h3>Projeto GTA</h3>
+                    <h3>Projeto X-Devs</h3>
 
                     <div class="informacoes-projeto">
-                        <p>Projeto feito usando HTML, CSS E JavaScript</p>
+                        <p>Projeto feito para praticar HTML, CSS E JavaScript</p>
                         <p>🔗Ver no GitHub Pages</p>
                     </div>
                 </a>
             </div>
 
-            <div class="projeto ativo">
-                <a href="https://gabrielfs12.github.io/semana-do-zero-gta-5/" target="_blank">
-                    <img src="./src/imagens/projeto-gta.png" alt="Projeto GTA - HTML, CSS E JS">
+            <div class="projeto">
+                <a href="https://gabrielfs12.github.io/praticando_lading_page/#" target="_blank">
+                    <img src="./src/imagens/projeto-landing.png" alt="Projeto Landing Page - HTML, CSS E JS">
 
-                    <h3>Projeto GTA</h3>
+                    <h3>Projeto Lading Page</h3>
 
                     <div class="informacoes-projeto">
-                        <p>Projeto feito usando HTML, CSS E JavaScript</p>
+                        <p>Projeto feito para praticar HTML, CSS E JavaScript</p>
                         <p>🔗Ver no GitHub Pages</p>
                     </div>
                 </a>
             </div>
 
-            <div class="projeto ativo">
-                <a href="https://gabrielfs12.github.io/semana-do-zero-gta-5/" target="_blank">
-                    <img src="./src/imagens/projeto-gta.png" alt="Projeto GTA - HTML, CSS E JS">
+            <div class="projeto">
+                <a href="https://gabrielfs12.github.io/praticando_lista_pokemon/" target="_blank">
+                    <img src="./src/imagens/projeto-listagem-pokemon.png" alt="Projeto Lista Pokemon - HTML, CSS E JS">
 
-                    <h3>Projeto GTA</h3>
+                    <h3>Projeto Lista Pokemon</h3>
 
                     <div class="informacoes-projeto">
-                        <p>Projeto feito usando HTML, CSS E JavaScript</p>
+                        <p>Projeto feito para praticar HTML, CSS E JavaScript</p>
                         <p>🔗Ver no GitHub Pages</p>
                     </div>
                 </a>
@@ -147,46 +184,7 @@
                     <h3>Projeto GTA</h3>
 
                     <div class="informacoes-projeto">
-                        <p>Projeto feito usando HTML, CSS E JavaScript</p>
-                        <p>🔗Ver no GitHub Pages</p>
-                    </div>
-                </a>
-            </div>
-
-            <div class="projeto">
-                <a href="https://gabrielfs12.github.io/semana-do-zero-gta-5/" target="_blank">
-                    <img src="./src/imagens/projeto-gta.png" alt="Projeto GTA - HTML, CSS E JS">
-
-                    <h3>Projeto GTA</h3>
-
-                    <div class="informacoes-projeto">
-                        <p>Projeto feito usando HTML, CSS E JavaScript</p>
-                        <p>🔗Ver no GitHub Pages</p>
-                    </div>
-                </a>
-            </div>
-
-            <div class="projeto">
-                <a href="https://gabrielfs12.github.io/semana-do-zero-gta-5/" target="_blank">
-                    <img src="./src/imagens/projeto-gta.png" alt="Projeto GTA - HTML, CSS E JS">
-
-                    <h3>Projeto GTA</h3>
-
-                    <div class="informacoes-projeto">
-                        <p>Projeto feito usando HTML, CSS E JavaScript</p>
-                        <p>🔗Ver no GitHub Pages</p>
-                    </div>
-                </a>
-            </div>
-
-            <div class="projeto">
-                <a href="https://gabrielfs12.github.io/semana-do-zero-gta-5/" target="_blank">
-                    <img src="./src/imagens/projeto-gta.png" alt="Projeto GTA - HTML, CSS E JS">
-
-                    <h3>Projeto GTA</h3>
-
-                    <div class="informacoes-projeto">
-                        <p>Projeto feito usando HTML, CSS E JavaScript</p>
+                        <p>Projeto feito para praticar HTML, CSS E JavaScript</p>
                         <p>🔗Ver no GitHub Pages</p>
                     </div>
                 </a>
